aun falta poco pero vamos bien

--- a/lab1.html
+++ b/lab1.html
@@ -1,5 +1,6 @@
-<html>
+<!DOCTYPE html>
 
+<html>
     <head>
         <title> Lab #1 </title>
         <meta name="description" content="Primer laboratorio">
@@ -15,7 +16,6 @@
             
             <header>
                 <h1>Descripción:</h1>
-                <h3>Escribe una breve descripción sobre: URL, MIME, métodos y códigos de errores HTTP, XML, XHTML, HTML5, JS, php, jsp, Ajax.</h3>
                 <table>
                     <tr>
                         <th>URL</th>
@@ -31,11 +31,11 @@
                     </tr>
                     <tr>
                         <th>XML</th>
-                        <td></td>
+                        <td>Es un lenguaje para transportar información en la web. A diferencia de html, XML se encarga de transportar más que de mostrar.</td>
                     </tr>
                     <tr>
                         <th>XHTML</th>
-                        <td></td>
+                        <td>Es otro tipo de lenguaje es es como la unión de HTML y XML.</td>
                     </tr>
                     <tr>
                         <th>HTML5</th>
