--- a/lab1.html
+++ b/lab1.html
@@ -4,8 +4,10 @@
     <head>
         <title> Lab #1 </title>
         <meta name="description" content="Primer laboratorio">
+        <link rel="stylesheet" href="lab3.css" type="text/css"> 
     </head>
     <body>
+        <h1 font-size="xx-large">Lab#1</h1>
         <article>
             <header>
                 <h1>Un poco sobre mí...</h1>
@@ -218,7 +220,7 @@
             
             <footer>
                 <p>
-                    <label>Calificación: 
+                    <label id="MiEstilacho">Calificación: 
                         0<input type="range" min="0" max="100" value="10"/>100
                     </label>
                 </p>
