--- a/lab1.html
+++ b/lab1.html
@@ -206,6 +206,16 @@
             </section>
             
             <section>
+                <h1>Lab#3:</h1>
+                <ul>
+                    <li>Es recomendable usar !important para definir lo que realmente se tiene que acatar en cuestiones de estilo de la página.</li>
+                    <li>Porque si es muy pesada puede tardar en cagarse. También porque se puede deformar por el tamaño de la página. (si tiene poca definición, se pixelea.)</li>
+                    <li>Si se quiere hacer una página responsiva, es recomendable usar % para que los tamaños cambien en relación a la ventana. Si se quiere un tamaño estático es mejor usar pixeles.</li>
+                    <li>Porque aumenta la velocidad de descarga del css por lo que los se aplican más rampidamente.</li>
+                </ul>
+            </section>
+            
+            <section>
                 <h1>Sitios consultados:</h1>
                 <ul>
                     <li>http://php.net/manual/en/intro-whatis.php</li>
