--- a/lab4.html
+++ b/lab4.html
@@ -4,7 +4,7 @@
     <head>
         <title> Lab #4 </title>
         <meta name="description" content="Lab. JavaScript">
-        <link rel="javascript" href="lab4.js" type="text/js"> 
+        <script type = "text/javascript" src = "Lab04_JS.js"></script>
         <link rel="stylesheet" href="lab3.css" type="text/css"> 
     </head>
     <body>
